--- a/Infrastructure/azure-pipelines.yml
+++ b/Infrastructure/azure-pipelines.yml
@@ -9,14 +9,5 @@ trigger:
 pool:
   vmImage: ubuntu-latest
 
-steps:
-- task: NodeTool@0
-  inputs:
-    versionSpec: '14.x'
-  displayName: 'Install Node.js'
-
-- script: |
-    npm install -g @angular/cli
-    npm install
-    ng build --prod
-  displayName: 'npm install and build'
+stages:
+-template: stages/stage-build.yaml
