--- a/Infrastructure/Stages/stage-build.yaml
+++ b/Infrastructure/Stages/stage-build.yaml
@@ -17,5 +17,6 @@ stages:
           - task: PublishBuildArtifacts@1
             displayName: 'Publish Artifact: dist'
             inputs:
-              PathtoPublish: dist
+              PathtoPublish: $(Build.ArtifactStagingDirectory)
+              artifactName: MyBuildOutputs
 
